# rs-dirent-filter-cel

./: Cargo.toml  README.md  build.sh  dirent-filter-cel  example.sh
src/: lib.rs
