[package]
name = "rs-dirent-filter-cel"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[[bin]]
name = "dirent-filter-cel"

[dependencies.clap]
version = "4"
default-features = false
features = [
	"color",
	"error-context",
	"help",
	"std",
	"suggestions",
	"usage",
	"derive",
]

[dependencies.cel]
version = "0"
default-features = false
features = [
	"chrono",
	"regex",
]

[dependencies.parse-size]
version = "1"


[dev-dependencies]
tempfile = "3.23.0"

